# llm_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  env_template  loki-config.yml  promtail-config.yml  pyproject.toml
data/: grafana.db  prompts.py
src/: app.py  conf.py  models.py  test.py
src/bot/: handlers.py  text_service.py
src/clients/: mongo.py
src/data/: history.py  utils.py
src/db/: repository.py  schema.py
src/dep/: agent.py  llm.py  mongo.py  postgres.py  tg.py
src/grpc_llm/: llm_server.py  llm_service.proto  llm_service_pb2.py  llm_service_pb2_grpc.py
src/models/: conversation.py  models.py  utils.py
src/scripts/: init_db.py
src/services/: agent_service.py  conversation_service.py  llm_service.py  message_service.py  summary_service.py  text_bot_service.py
test/: test_conversation.py  test_db.py  test_file_history.py  test_llm.py  test_mongo.py  test_text_service.py
